--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,9 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  flash:
+    uploads:
+      created: "'%{file_name}' was successfully imported."
   activerecord:
     errors:
       messages:
