--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,15 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  number: 
+    currency: 
+      format: 
+        format: "%u %n"
+        unit: !binary |
+          4oKs
+        separator: .
+        precision: 2
+        delimiter: ","
   flash:
     uploads:
       created: "'%{file_name}' was successfully imported."
