--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,8 +6,7 @@ en:
     currency: 
       format: 
         format: "%u %n"
-        unit: !binary |
-          4oKs
+        unit: EUR
         separator: .
         precision: 2
         delimiter: ","
