--- a/README
+++ b/README
@@ -12,7 +12,9 @@
 Roadmap
 =======
 In random order:
-* Apply presets from presets index page only to 'empty' expenses
+* Remember page when in expense edit and adding object through sidebar first
+* Assign bankaccount to person
+* Filter categories (and it's expenses) by person
 * ignore multiple spaces in presets
 * use regex in presets?
 * Browse to next or previous expense
