--- a/README
+++ b/README
@@ -21,11 +21,10 @@ In random order:
 * Browse to next or previous expense
 * Apply preset during import
 * Apply preset from edit preset page
-* Display at, pos, etc. icons for expense
+* Display atm, pos, etc. icons for expense
 * Create filter for expenses:
   * 'empty' expenses
   * expenses from last week/month/...
 
 Bugs
 ====
-Max y-value for categories chart doesn't seem to work for all scenario's
