--- a/README
+++ b/README
@@ -14,7 +14,7 @@ Roadmap
 In random order:
 * Remember page when in expense edit and adding object through sidebar first
 * Assign bankaccount to person
-* Filter categories (and it's expenses) by person
+* Filter categories (and it's expenses) by person, bank_account, period
 * Assign preset to selected expenses manually
 * ignore multiple spaces in presets
 * use regex in presets?
