--- a/README
+++ b/README
@@ -12,6 +12,10 @@
 Roadmap
 =======
 In random order:
+* Filter expenses on category- and creditorname
+* Apply filter to chart
+* Higlight search results
+* Use GMail like pagination
 * Remember page when in expense edit and adding object through sidebar first
 * Assign bankaccount to person
 * Filter categories (and it's expenses) by person, bank_account, period
