Fixed issue with returning from submitted edit page when there is a search applied.

--- a/README
+++ b/README
@@ -32,3 +32,4 @@ Bugs
 ====
 * Remember page when in expense edit and adding object through sidebar first
 * Remember Search string (and page) after applying presets on expenses page
+* Search on expenses, edit then save seems to break the commit
